[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "Test-project"
dynamic = ["version"]
authors = [
  { name="Hemant Sharma", email="hemantsharmanow@gmail.com" },
]
description = "A small example package"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
] 
dependencies = ["requests"]

[tool.setuptools.dynamic]
version = {file = "VERSION"}