[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "Test-project"
dynamic = ["version"]
authors = [
  { name="Example Author", email="author@example.com" },
]
description = "A small example package"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
] 
dependencies = ["requests"]

[tool.hatch.dynamic]
version = {file = "VERSION"}